multi set curve endpoint
